ui fixes for spacing between titles

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -22,6 +22,7 @@ h1 {
 
 h2 {
   font-size: 30px;
+  padding-bottom: 15px;
 }
 
 h3 {
